Fix the challenge page spacing and alignment

--- a/challenges.css
+++ b/challenges.css
@@ -1,3 +1,7 @@
+.challenge-background {
+  background-color: #D3D3D3;
+  width: 92%;
+}
 body {
   background-color: #D3D3D3;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -8,29 +12,16 @@ body {
   text-align: center;
 }
 
-.challenge-background {
-  background-color: #FFFFFF;
-}
 .challenge-font {
   width: 90%;
-  margin: -2%;
-}
-
-.event {
-  padding-left: 5%;
-  border-style: groove;
-  border-color: #FFFFFF;
-  color: #FFFFFF;
-  width: 400px;
-  height: 215px;
-  padding-bottom: 3%;
 }
 
 .progress {
   position: absolute;
+  display:inline;
   width: 5%;
   height: 25%;
-  margin: -47% 0% 10% 83%;
+  margin: -50% -30% 0% 83%;
   opacity: 100%;
 }
 
@@ -45,4 +36,13 @@ body {
 
 #mental-pic {
   background-image: url("woman-mental.jpg");
+}
+.event {
+  border-style: groove;
+  border-color: #FFFFFF;
+  color: #FFFFFF;
+  height: 215px;
+  width: 100%;
+  padding: 3%;
+  margin-bottom: 1%;
 }
